plugins {
	id 'java'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'io.freefair.lombok' version '8.6'
}

ext.versions = [
	springBoot : '3.2.1'
]

allprojects {
	apply plugin: 'java'
	sourceCompatibility = '21'
	targetCompatibility = '21'

	repositories {
		mavenCentral()
	}
}

subprojects {
	group = 'com.rafanegrette'
	version = '0.0.1-SNAPSHOT'

	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'io.freefair.lombok'

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}

	dependencyManagement {
		imports {
			mavenBom("org.springframework.boot:spring-boot-dependencies:${versions.springBoot}")
		}
	}

	test {
		useJUnitPlatform()
	}
}

